# Proyecto_Flores_Takata

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Lab_modelado.code-workspace  Proyecto_final (1).ipynb  Proyecto_final.ipynb
proyecto_final/: dataset.py  features.py  plots.py
proyecto_final/modeling/: predict.py  train.py
