[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_final"
version = "0.0.1"
description = "El proyecto final de la materia Modelado de Datos"
authors = [
  { name = "Roi Jared Flores Garza Stone, Rafael Takata Garc\u00eda" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["proyecto_final"]
force_sort_within_sections = true
